# FWCore/Framework library
file(GLOB SOURCES src/*.cc src/global/*.cc src/limited/*.cc src/one/*.cc src/stream/*.cc)
file(GLOB HEADERS interface/*.h interface/*.icc interface/*/*.h)

add_library(FWCoreFramework SHARED ${SOURCES})

target_sources(FWCoreFramework
    PUBLIC
        FILE_SET HEADERS
        BASE_DIRS ${CMAKE_SOURCE_DIR}
        FILES ${HEADERS}
)

target_link_libraries(FWCoreFramework
    PUBLIC
        DataFormatsCommon
        DataFormatsProvenance
        FWCoreAbstractServices
        FWCoreCommon
        FWCoreConcurrency
        FWCoreMessageLogger
        FWCoreParameterSet
        FWCorePluginManager
        FWCoreReflection
        FWCoreServiceRegistry
        FWCoreUtilities
        FWCoreVersion
        Boost::boost
        Boost::program_options
        TBB::tbb
        ROOT::Core
)

set_target_properties(FWCoreFramework PROPERTIES
    VERSION 1.0.0
    SOVERSION 1
)

# Build cmsRun executable
if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/bin/cmsRun.cpp)
    add_executable(cmsRun bin/cmsRun.cpp)
    
    target_include_directories(cmsRun
        PRIVATE
            ${CMAKE_CURRENT_SOURCE_DIR}/interface
            ${CMAKE_SOURCE_DIR}
    )
    
    target_link_libraries(cmsRun
        PRIVATE
            FWCoreFramework
            FWCoreParameterSetReader
            FWCoreParameterSet
            FWCoreMessageLogger
            FWCorePluginManager
            FWCoreServiceRegistry
            FWCoreUtilities
            FWCoreConcurrency
            TBB::tbb
            ROOT::Core
    )
    
    set_target_properties(cmsRun PROPERTIES
        RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
    )
endif()

# Copy and install Python files
if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/python)
    file(RELATIVE_PATH PKG_PYTHON_PATH ${CMAKE_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
    file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/python/
         DESTINATION ${CMAKE_BINARY_DIR}/python/${PKG_PYTHON_PATH}
         PATTERN "__pycache__" EXCLUDE
         PATTERN "*.pyc" EXCLUDE)
    install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/python/
            DESTINATION python/${PKG_PYTHON_PATH}
            PATTERN "__pycache__" EXCLUDE
            PATTERN "*.pyc" EXCLUDE)
endif()
