# FWCore/ServiceRegistry library
file(GLOB SOURCES src/*.cc)

add_library(FWCoreServiceRegistry SHARED ${SOURCES})

target_include_directories(FWCoreServiceRegistry
    PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/interface>
        $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>
        $<INSTALL_INTERFACE:include>
)

target_link_libraries(FWCoreServiceRegistry
    PUBLIC
        FWCoreAbstractServices
        DataFormatsProvenance
        FWCoreParameterSet
        FWCoreMessageLogger
        FWCorePluginManager
        FWCoreUtilities
        Boost::boost
        TBB::tbb
)

set_target_properties(FWCoreServiceRegistry PROPERTIES
    VERSION 1.0.0
    SOVERSION 1
)
